fixed search categories on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1040,6 +1040,12 @@ h2 {
   text-indent: 25px;
 }
 
+@media screen and (max-width: 768px) {
+	#filter-categories {
+		width: 200px;
+	}
+}
+
 /********************************************
 * google maps
 ********************************************/
